# magic-wormhole-mailbox-rs

./: Cargo.toml
src/: core.rs  lib.rs  mailbox.rs  main.rs  network.rs  rendezvous_server.rs  server_messages.rs  zeroconf.rs
src/rendezvous_server/: mailbox.rs  nameplate.rs  state.rs
