[package]
name = "avahi-wormhole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
socket2 = { version = "0.4.1", features = [ "all" ] }
magic-wormhole = "0.5.0"
async-channel = "1.7.1"
zeroconf = "0.10.5"
async-std = "1.12.0"
futures = "0.3.24"
uuid = { version = "1.1.2", features = [ "v4" ] }
once_cell = "1.15.0"
async-tungstenite = "0.17.2"
serde = "1.0.145"
serde_json = "1.0.85"
serde_derive = "1.0.145"
derive_more = "0.99.17"
hex = "0.4.3"
backtrace = "0.3.66"
async-broadcast = "0.4.1"
thiserror = "1.0.37"