[package]
name = "magic-wormhole-mailbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
async-std = "1.12.0"
async-io = "1.9.0"
futures = "0.3.24"
async-tungstenite = "0.17.2"
serde = "1.0.145"
serde_json = "1.0.85"
serde_derive = "1.0.145"
derive_more = "0.99.17"
hex = { version = "0.4.3", features = [ "serde" ] }
backtrace = "0.3.66"
async-broadcast = "0.4.1"
thiserror = "1.0.37"
parking_lot = "0.12.1"
